<?xml version="1.0" encoding="utf-8"?><!--添加司放地页面-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="添加司放地" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--编号-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ac_edit_flying_item_h"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/str_add_fly_numbering"
                android:textColor="@color/color_userinfo_tx"
                android:textSize="@dimen/userinfo_tx_size" />

            <TextView
                android:id="@+id/et_flying_numbering"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:background="@null"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:singleLine="true"
                android:text="21"
                android:textColor="@color/color_userinfo_ex"
                android:textSize="@dimen/userinfo_tx_size" />
        </LinearLayout>

        <!--分割线-->
        <include layout="@layout/view_dividerline_h1" />

        <!--地点-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ac_edit_flying_item_h"

            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/str_add_fly_place"
                android:textColor="@color/color_userinfo_tx"
                android:textSize="@dimen/userinfo_tx_size" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7">


                <EditText
                    android:id="@+id/et_flying_place"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="7"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_add_fly_place_hint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_userinfo_ex"
                    android:textColorHint="@color/color_et_hint"
                    android:textSize="@dimen/userinfo_tx_size" />

                <ImageButton
                    android:id="@+id/imgbtn_place"
                    android:layout_width="@dimen/ac_edit_flying_item_h"
                    android:layout_height="@dimen/ac_edit_flying_item_h"
                    android:background="@null"
                    android:src="@mipmap/ullage_tool_sfd" />

            </LinearLayout>

        </LinearLayout>

        <!--分割线-->
        <include layout="@layout/view_dividerline_h1" />

        <!--坐标-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ac_edit_flying_item_h"

            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center"
                android:inputType="number|numberDecimal"
                android:text="@string/str_add_fly_coordinate"
                android:textColor="@color/color_userinfo_tx"
                android:textSize="@dimen/userinfo_tx_size" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="7">


                <!--经度-->
                <EditText
                    android:id="@+id/et_flying_lo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_add_fly_lo_hint"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_userinfo_ex"
                    android:textColorHint="@color/color_et_hint"
                    android:textSize="@dimen/userinfo_tx_size" />

                <!--纬度-->
                <EditText
                    android:inputType="numberDecimal"
                    android:id="@+id/et_flying_la"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/str_add_fly_la_hint"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/color_userinfo_ex"
                    android:textColorHint="@color/color_et_hint"
                    android:textSize="@dimen/userinfo_tx_size" />


            </LinearLayout>


        </LinearLayout>

        <!--分割线-->
        <include layout="@layout/view_dividerline_h1" />

        <!--备注-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/ac_edit_flying_item_remark_h"
            android:layout_marginBottom="1dp"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/ac_tv_flying_remark_mt"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:text="@string/str_flying_remark"
                android:textColor="@color/color_userinfo_tx"
                android:textSize="@dimen/userinfo_tx_size" />

            <EditText
                android:id="@+id/et_flying_remark"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ac_tv_flying_remark_mt"
                android:layout_weight="7"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/str_add_fly_bz_hint"
                android:maxLines="3"
                android:textColor="@color/color_userinfo_ex"
                android:textColorHint="@color/color_et_hint"
                android:textSize="@dimen/userinfo_tx_size" />
        </LinearLayout>

        <com.cpigeon.cpigeonhelper.ui.MyTextView
            android:textColor="@color/color_cccccc"
            android:textSize="14sp"
            android:id="@+id/hint_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:singleLine="false"
            android:text="@string/str_add_fly_hint_tv" />
    </LinearLayout>

</RelativeLayout>